--- a/docs/style.css
+++ b/docs/style.css
@@ -59,8 +59,8 @@ html {
 body {
   margin: 0;
   color: var(--primary);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-  'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 18px;
   line-height: 1.8;
   word-break: break-word;
@@ -123,8 +123,8 @@ textarea {
   -webkit-appearance: none;
 }
 button,
-input[type='button'],
-input[type='submit'] {
+input[type="button"],
+input[type="submit"] {
   cursor: pointer;
 }
 input,
@@ -341,7 +341,8 @@ img {
 }
 .post-content del {
   text-decoration: none;
-  background: linear-gradient(to right, var(--primary) 100%, transparent 0) 0 50% / 1px 1px repeat-x;
+  background: linear-gradient(to right, var(--primary) 100%, transparent 0) 0
+    50% / 1px 1px repeat-x;
 }
 .post-content p,
 .post-content ul,
@@ -438,7 +439,7 @@ img {
   margin-left: 4px;
   margin-right: 4px;
   padding: 4px 6px;
-  font-family: Menlo, Monaco, 'Courier New', Courier, monospace;
+  font-family: Menlo, Monaco, "Courier New", Courier, monospace;
   font-size: 0.78em;
   line-height: 1.5;
   background: var(--code-bg);
