--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
-  <span
-    >Copyright &copy;
-    <script>
-      document.write(new Date().getFullYear());
-    </script>
+  <span>
+    Copyright &copy;
+    <script>document.write(new Date().getFullYear()' ');</script>
     Robert LaRocca.
+    <br />
+    This work is licensed under a <a rel="license" href="/license">Creative Commons Attribution 4.0 International License.
   </span>
 </footer>
