Fix minor typo.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,6 @@
     <script>document.write(new Date().getFullYear()' ');</script>
     Robert LaRocca.
     <br />
-    This work is licensed under a <a rel="license" href="/license">Creative Commons Attribution 4.0 International License.
+    This work is licensed under a <a rel="license" href="/license/">Creative Commons Attribution 4.0 International License.
   </span>
 </footer>
