Remove Matrix social icon.
- Tweaked PaperMod theme to prevent '.Site.Social' deprecation error. Visit https://github.com/adityatelange/hugo-PaperMod/issues/1573 for more information about this bug.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
   <span>
     Copyright &copy;
-    <script>document.write(new Date().getFullYear()' ');</script>
+    <script>document.write(new Date().getFullYear())," ";</script>
     Robert LaRocca.
     <br />
-    This work is licensed under a <a rel="license" href="/license/">Creative Commons Attribution 4.0 International License.
+    This work is licensed under a <a rel="license" href="/license/">Creative Commons Attribution 4.0 International License</a>.
   </span>
 </footer>
