Fix copyright missing whitespace

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,6 @@
 <footer class="footer">
   <span>
-    Copyright &copy;
-    <script>document.write(new Date().getFullYear())," ";</script>
-    Robert LaRocca.
+    Copyright &copy; <script>document.write(new Date().getFullYear());</script> Robert LaRocca.
     <br />
     This work is licensed under a <a rel="license" href="/license/">Creative Commons Attribution 4.0 International License</a>.
   </span>
